Fixed category alignment problem

--- a/Crowd Knowledge Contribution AS/Content/articleshow.css
+++ b/Crowd Knowledge Contribution AS/Content/articleshow.css
@@ -7,8 +7,8 @@
     text-shadow: 2px 2px darkred;
     color: white;
     position: relative;
-    top: 100px;
-    right: 750px;
+    top: 50px;
+    left:50px;
     text-decoration: none;
 }
 
